--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
-    "@types/react": "^17.0.44",
-    "@types/react-dom": "^17.0.15",
+    "@types/react": "^16.0.44",
+    "@types/react-dom": "^16.0.15",
+    "jira-dev-tool": "^1.7.61",
     "qs": "^6.10.3",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
@@ -55,5 +56,8 @@
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --write"
     ]
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
