--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^16.0.44",
     "@types/react-dom": "^16.0.15",
+    "antd": "^4.19.5",
     "jira-dev-tool": "^1.7.61",
     "qs": "^6.10.3",
     "react": "^16.0.0",
@@ -19,9 +20,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "prepare": "husky install",
     "mock": "json-server -w __json-server-mock__/db.json -p 4000 --middlewares __json-server-mock__/middleware.js"
@@ -46,6 +47,8 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^6.4.3",
+    "craco-less": "^2.0.0",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^7.0.4",
     "json-server": "^0.17.0",
