--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.0.0",
     "react-query": "^3.34.19",
     "react-scripts": "5.0.0",
+    "react-use": "^17.3.2",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
