--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-query": "^3.34.19",
+    "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "react-use": "^17.3.2",
     "typescript": "^4.6.3",
